gixed image layout issue

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -75,8 +75,9 @@ body:has(.primary-nav.active) {
     position: absolute;
     left: 16px;
     top: 16px;
-    min-width: 100%;
-    min-height: 100%;
+    width: 100%;
+    height: auto;
+    aspect-ratio: 1;
     z-index: -1;
     background: var(--color-border);
     border-radius: inherit;
